@@ -1,0 +1,5 @@
+/**
+ * Transaction focus: types which monopolise a transaction's attention.
+ */
+// Actual definitions in .hxx file so editors and such recognize file type.
+#include "pqxx/types.hxx"
