@@ -10,6 +10,7 @@
  - Lots of deprecated stream constructors.
  - `pqxx::row::swap()` now finally has the `deprecated` attribute.
  - Finally deprecated a bunch of `field`, `row`, and `result` constructors.
+ - Exposed a class for "a transaction can only have one of these at a time."
 7.3.1
  - New, simpler API for large objects: `blob` ("binary large object").
  - `largeobject` and friends are now deprecated.
